# MLRL_os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  smoke_test_results.json
.claude/: settings.json  settings.local.json
docs/plans/: 2026-03-10-v02-design.md  2026-03-10-v02-implementation-plan.md
docs/reports/: 2026-03-10-v02-smoke-test-report.md
docs_v1/: REVIEW.md  TEST_REPORT.md
docs_v1/claude_memory/: MEMORY.md
docs_v1/design/: BLUEPRINT.md  CONSTITUTION.md  CONTRACTS.md  DERIVED_TARGETS.md  IMPLEMENTATION_PLAN.md  INDEX.md  SKELETON.md
scripts/: create_db.py
src/mlrl_os/: __init__.py  cli.py
src/mlrl_os/api/: app.py  config_routes.py  data_routes.py  experiment_routes.py  model_routes.py  rl_routes.py  schemas.py
src/mlrl_os/config/: defaults.py  resolver.py  rl_schemas.py  schemas.py
src/mlrl_os/core/: dataset.py  experiment.py  types.py
src/mlrl_os/data/: discovery.py  external_loader.py  registry.py  simos_loader.py  validation.py
src/mlrl_os/evaluation/: comparison.py  html_export.py  metrics.py  reports.py
src/mlrl_os/experiment/: runner.py  seed.py  tracker.py
src/mlrl_os/features/: detection.py  entity.py  store.py  target_derivation.py  time_series.py
src/mlrl_os/models/: engine.py  registry.py  tuning.py
src/mlrl_os/rl/: __init__.py  curriculum.py  environment.py  networks.py  replay_buffer.py  rewards.py  runner.py  simos_client.py  (+1 more)
tests/: conftest.py
tests/fixtures/: simos_export_small.json
tests/integration/: test_postgres_integration.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
(+90 files in other folders)
