[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlrl-os"
version = "0.2.0"
description = "Predictive Intelligence Instrument for Operational Systems"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scikit-learn>=1.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "optuna>=3.0",
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]
rl = ["torch>=2.0"]
postgres = ["asyncpg>=0.29"]
all = ["lightgbm>=4.0", "xgboost>=2.0", "torch>=2.0", "asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.11",
    "ruff>=0.6",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "torch>=2.0",
    "asyncpg>=0.29",
]

[project.scripts]
mlrl-os = "mlrl_os.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["mlrl_os"]

[tool.coverage.report]
fail_under = 90
show_missing = true
